test/scc_test/stmt/semantic-errors/047.a
047.t:3:12: error: return with a value, in function returning void